src/eval/snapshots/monkey_language_server__eval__test__builtin_puts_1.snap
---
source: src/eval/test.rs
description: "puts(\"hello world\")"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [],
    refs: [
        Spanned("puts", "(0,0)->(0,4)"),
    ],
    parent_id: None,
    children: [],
    id: 0,
}

========================

[]
