src/eval/snapshots/monkey_language_server__eval__test__builtin_puts_2.snap
---
source: src/eval/test.rs
description: "puts(\"hello world\", 1)"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [],
    refs: [
        Pos("puts", "(0,0)->(0,4)"),
    ],
    scope_range: "(0,0)->(0,22)",
    parent_range: None,
    children: [],
}

========================

[]
