src/eval/snapshots/monkey_language_server__eval__test__builtin_puts_3.snap
---
source: src/eval/test.rs
description: puts()
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [],
    refs: [
        Pos("puts", "(0,0)->(0,4)"),
    ],
    scope_range: "(0,0)->(0,6)",
    parent_range: None,
    children: [],
}

========================

[]
