src/eval/snapshots/monkey_language_server__eval__test__builtin_rest_bad_arg_count_2.snap
---
source: src/eval/test.rs
description: "let x = rest([1], [1]);"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "x",
            Pos(Array, (0,4)->(0,5)),
        ),
    ],
    refs: [
        Pos("rest", "(0,8)->(0,12)"),
        Pos("x", "(0,4)->(0,5)"),
    ],
    scope_range: "(0,0)->(0,23)",
    parent_range: None,
    children: [],
}

========================

[
    "TypeError: mismatched arg and param count. Expected 1, got 2. (0,12)->(0,13)",
]
