src/eval/snapshots/monkey_language_server__eval__test__good_bang_prefix_1.snap
---
source: src/eval/test.rs
description: let x = !true;
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "x",
            Pos(Bool, (0,4)->(0,5)),
        ),
    ],
    refs: [
        Pos("x", "(0,4)->(0,5)"),
    ],
    scope_range: "(0,0)->(0,14)",
    parent_range: None,
    children: [],
}

========================

[]
