src/eval/snapshots/monkey_language_server__eval__test__good_bang_prefix_2.snap
---
source: src/eval/test.rs
description: let x = !12;
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "x",
            Spanned(Bool, (0,4)->(0,5)),
        ),
    ],
    parent_id: None,
    children: [],
    id: 0,
}

========================

[]
