src/eval/snapshots/monkey_language_server__eval__test__good_bang_prefix_4.snap
---
source: src/eval/test.rs
description: "let x = ![];"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        Value("x", Bool, (0,4)->(0,5), (0,0)->(0,12)),
    ],
    refs: [
        Pos("x", "(0,4)->(0,5)"),
    ],
    scope_range: "(0,0)->(0,12)",
    parent_range: None,
    children: [],
}

========================

[]
