src/eval/snapshots/monkey_language_server__eval__test__good_bang_prefix_5.snap
---
source: src/eval/test.rs
description: "let x = !{};"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "x",
            Spanned(Bool, (0,4)->(0,5)),
        ),
    ],
    refs: [
        Spanned("x", "(0,4)->(0,5)"),
    ],
    scope_range: "(0,0)->(0,12)",
    parent_range: None,
    children: [],
}

========================

[]
